crates/keron-lang/tests/corpus/errors/check/struct_default_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `String`
  --> 4:26
  |
4 | struct Bad { port: Int = "eighty-eighty" }
  |                          ^^^^^^^^^^^^^^^
